apps/joplin/joplin.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-server
spec:
  type: ClusterIP
  ports:
    - port: 22300
      targetPort: 22300
  selector:
    app: joplin-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin-server
  template:
    metadata:
      labels:
        app: joplin-server
    spec:
      containers:
        - name: joplin-server
          image: joplin/server:2.8.10
          ports:
            - containerPort: 22300
          volumeMounts:
            - mountPath: /var/lib/joplin
              name: joplin-data
      volumes:
        - name: joplin-data
          persistentVolumeClaim:
            claimName: joplin-data
